k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gateway-external
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world-vs-external
spec:
  hosts:
  - "*"
  gateways:
  - hello-world-gateway-external
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: hello-world-api
        subset: v1
      weight: 80
    - destination:
        host: hello-world-api
        subset: v2
      weight: 20
